# bris-writer

./: pyproject.toml
src/writer/: main.py
